<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fondo"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:id="@+id/txtmateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txtcreditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/credimat"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/notas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <TableLayout
                        android:id="@+id/cabecera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TableLayout>

                    <ScrollView
                        android:id="@+id/scroll"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:gravity="center_horizontal"
                        android:scrollbars="vertical" >

                        <LinearLayout
                            android:id="@+id/hola"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical" >

                            <TableLayout
                                android:id="@+id/tabla"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" >
                            </TableLayout>
                        </LinearLayout>
                    </ScrollView>

                    <LinearLayout
                        android:id="@+id/holaa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.05"
                        android:gravity="bottom"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/totalmateria"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/totalnota"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/totalnota"
                            android:gravity="right"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ScrollView
                        android:id="@+id/scrollView1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <LinearLayout
                            android:id="@+id/asas"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="10dp" >

                            <TextView
                                android:id="@+id/txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingBottom="15dp"
                                android:text="@string/txtlogro"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textStyle="normal|italic" />

                            <EditText
                                android:id="@+id/txtlogronota"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:gravity="center"
                                android:hint="@string/logronota"
                                android:inputType="numberDecimal" />

                            <LinearLayout
                                android:id="@+id/boton2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="top"
                                android:orientation="horizontal"
                                android:padding="10dp" >

                                <Button
                                    android:id="@+id/btnlogrocalcular"
                                    style="@style/boton_ingresar"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/btnlogrocalu" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/boton11"
                                android:layout_width="match_parent"
                                android:layout_height="136dp"
                                android:gravity="center|bottom"
                                android:orientation="horizontal" >

                                <EditText
                                    android:id="@+id/editText1"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:cursorVisible="false"
                                    android:ems="10"
                                    android:focusable="false"
                                    android:inputType="textMultiLine" />
                            </LinearLayout>
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addnotas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp" >

                    <Spinner
                        android:id="@+id/eva_notas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="30dp"
                        android:paddingTop="60dp"
                        android:text="@string/nota"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/txtnota"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/notass"
                        android:inputType="numberDecimal" />

                    <LinearLayout
                        android:id="@+id/boton10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|top"
                        android:orientation="horizontal"
                        android:padding="10dp" >

                        <Button
                            android:id="@+id/addnota"
                            style="@style/boton_ingresar"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/addnota" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/evaluaciones"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <LinearLayout
                        android:id="@+id/evaluaciones1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/eva"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="17sp"
                            android:textStyle="italic"
                            android:typeface="serif" />

                        <EditText
                            android:id="@+id/txtevaluacion"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:ems="10"
                            android:gravity="center"
                            android:inputType="text" >

                            <requestFocus />
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/evaluaciones3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp" >

                        <LinearLayout
                            android:id="@+id/evaluaciones4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp" >

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/peso"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textSize="17sp"
                                android:textStyle="italic"
                                android:typeface="serif" />

                            <EditText
                                android:id="@+id/txtpeso"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:ems="10"
                                android:gravity="center"
                                android:inputType="number" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/boton6"
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:gravity="center|bottom"
                        android:orientation="horizontal"
                        android:padding="10dp" >

                        <Button
                            android:id="@+id/addevaluacion"
                            style="@style/boton_ingresar"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/agregar" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/boton3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="horizontal"
                        android:padding="10dp" >

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/porc"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/txtporcen"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>